# auth-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
auth-project/: pyproject.toml  pytest.ini
auth-project/src/backend/authentication/: models.py  serializers.py  views.py
auth-project/src/backend/authentication/migrations/: 0001_initial.py
auth-project/src/backend/authorization/: admin.py  models.py  permissions.py
auth-project/src/backend/config/: settings.py  urls.py
auth-project/src/backend/mock_business/: models.py  views.py
auth-project/tests/: fixtures.py
auth-project/tests/unit/: test_authentication.py  test_mock_business.py
src/backend/: manage.py
src/backend/authentication/: admin.py  models.py
src/backend/authorization/: permissions.py  serializers.py  urls.py  views.py
src/backend/authorization/fixtures/: init_data.json
src/backend/authorization/migrations/: 0001_initial.py
src/backend/config/: settings.py  urls.py
src/backend/mock_business/: urls.py
tests/unit/: test_authorization.py
